--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,9 +1,9 @@
-$colour-primary: #9356DC;
-$colour-secondary: #FF79DA;
-$colour-tertiary: #99E2D0;
+$colour-primary: #9356dc;
+$colour-secondary: #ff79da;
+$colour-tertiary: #99e2d0;
 
-$gradient: radial-gradient(#FF79DA, #9356DC);
-$light-gradient: radial-gradient(hsl(317,100,79), hsl(267,66,65));
+$gradient: radial-gradient(#ff79da, #9356dc);
+$light-gradient: radial-gradient(hsl(317, 100, 79), hsl(267, 66, 65));
 
 $soft-grey: #f7f7f7;
 $mid-grey: #ededed;
