--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -213,6 +213,7 @@
       &:hover {
         opacity: 1;
         transition: opacity 700ms;
+        transition-timing-function: ease-out;
       }
     }
   }
