--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -190,6 +190,7 @@
     position: absolute;
     top: 80%;
     left: 85%;
+    cursor: pointer;
 
     .far {
       height: 20px;
@@ -199,7 +200,7 @@
 
       &:hover {
         opacity: 0;
-        transition: opacity 700ms;
+        transition: opacity 700ms ease-in-out;
       }
     }
 
@@ -212,8 +213,7 @@
 
       &:hover {
         opacity: 1;
-        transition: opacity 700ms;
-        transition-timing-function: ease-out;
+        transition: opacity 700ms ease-in-out;
       }
     }
   }
