--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,3 +1,5 @@
+//Le code ci-dessous concerne le bouton "Explorer nos restaurants" de la page d'accueil.
+//Il est également réutilisé pour le bouton "Commander" sur les pages individuelles des restaurants.
 .btn {
   @include bold-typo;
 
