--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -185,39 +185,56 @@
     border-radius: 0.1rem;
     color: #008766;
   }
-  &__heart {
-    width: 20px;
-    height: 20px;
-    position: absolute;
-    top: 80%;
-    left: 85%;
-    cursor: pointer;
+  &__name {
+    @include bold-typo;
+    font-size: 1.2rem;
+    padding: 0.5rem 0 0.1rem 0.8rem;
+  }
+  &__description {
+    @include flex-row;
+    justify-content: unset;
 
-    .far {
-      height: 20px;
-      width: 20px;
-      position: absolute;
-      opacity: 1;
-
-      &:hover {
-        opacity: 0;
-        transition: opacity 700ms ease-in-out;
-      }
+    &-text {
+      @include soft-typo;
+      padding: 0.1rem 0 1rem 0.8rem;
+      width: 85%;
     }
-
-    .fas {
-      @include fav-heart;
-      height: 20px;
-      width: 20px;
-      position: absolute;
-      opacity: 0;
-
-      &:hover {
-        opacity: 1;
-        transition: opacity 700ms ease-in-out;
-      }
+    &-fav {
+      width: 10%;
     }
   }
+}
+.heart {
+  width: 20px;
+  height: 20px;
+  position: relative;
+  cursor: pointer;
+
+  .far {
+    height: 20px;
+    width: 20px;
+    position: absolute;
+    opacity: 1;
+
+    &:hover {
+      opacity: 0;
+      transition: opacity 700ms ease-in-out;
+    }
+  }
+
+  .fas {
+    @include fav-heart;
+    height: 20px;
+    width: 20px;
+    position: absolute;
+    opacity: 0;
+
+    &:hover {
+      opacity: 1;
+      transition: opacity 700ms ease-in-out;
+    }
+  }
+
   &__heart-container {
     width: 100%;
     height: 100%;
@@ -228,14 +245,5 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-  }
-  &__name {
-    @include bold-typo;
-    font-size: 1.2rem;
-    padding: 0.5rem 0 0.1rem 0.8rem;
-  }
-  &__description {
-    @include soft-typo;
-    padding: 0.1rem 0 1rem 0.8rem;
   }
 }
