--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 
 @import "./components/buttons";
 @import "./components/spinner";
+@import "./components/heart";
 
 @import "./layout/header";
 @import "./layout/footer";
