--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -198,6 +198,10 @@
       @include soft-typo;
       padding: 0.1rem 0 1rem 0.8rem;
       width: 85%;
+
+      @media (min-width: 1023px) and (max-width: 1200px) {
+        width: 80%;
+      }
     }
     &-fav {
       width: 10%;
